--- a/.github/workflows/build-listing.yml
+++ b/.github/workflows/build-listing.yml
@@ -1,19 +1,15 @@
-name: Update Website
+name: Build Repo Listing
 
-env:
-  listPublishDirectory: Website
-  pathToCi: ci
-  
 on: 
   workflow_dispatch:
   workflow_run:
     workflows: [Build Release]
     types:
       - completed
+  push:
+    branches: [main]
   release:
      types: [published, edited, created, unpublished, deleted, released]
-  push:
-    branches: ["main"]
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -25,21 +21,27 @@ permissions:
 concurrency:
   group: "pages"
   cancel-in-progress: true
+  
+env:
+  listPublishDirectory: Website
+  pathToCi: ci
+  indexLocation: "https://www.matthewherber.com/PhysboneConstraints/index.json"
 
 jobs:
-  build-web:
-    name: build-web
+  
+  build-listing:
+    name: build-listing
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-
     runs-on: ubuntu-latest
     steps:
+      
       - uses: actions/checkout@v3 # check out this repo
       - uses: actions/checkout@v3 # check out automation repo
         with:
           #repository: vrchat-community/package-list-action
-          repository: Happyrobot33/package-list-action #TODO: Change this to the main repo once it's merged
+          repository: Happyrobot33/package-list-action
           path: ${{env.pathToCi}}
           clean: false # otherwise the local repo will no longer be checked out
           
@@ -52,10 +54,10 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('**/global.json', '**/*.csproj') }}
           
       - name: Build Package Version Listing
-        run: ${{env.pathToCi}}/build.cmd BuildMultiPackageListing --root ${{env.pathToCi}} --list-publish-directory $GITHUB_WORKSPACE/${{env.listPublishDirectory}}
+        run: ${{env.pathToCi}}/build.cmd BuildMultiPackageListing --root ${{env.pathToCi}} --list-publish-directory $GITHUB_WORKSPACE/${{env.listPublishDirectory}} --current-listing-url ${{env.indexLocation}}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+ 
       - name: Setup Pages
         uses: actions/configure-pages@v3
         
