--- a/Packages/.gitignore
+++ b/Packages/.gitignore
@@ -2,4 +2,5 @@
 !com.vrchat.core.*
 
 # Change this to match your new package name
-!com.vrchat.demo-template 
+!com.happyrobot33.physboneconstraints
+!com.vrchat.core.*/
